Added 2 more recipies

--- a/recipes/biriyani.html
+++ b/recipes/biriyani.html
@@ -99,5 +99,6 @@
             onto a warm serving dish.
             </li>
         </ol>
+        <h4><a href="../index.html">back to home page</a></h4>
     </body>
 </html>
