--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="recipes/biriyani.html">BIRIYANI</a>
-
+    <br>
+    <a href="recipes/choco_cake.html">CHOCOLATE MAYO CAKE</a>
 </body>
 </html>
